# infikar

./: .gitignore  README.md  env.example  manage.py  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: docker-build.yml
accounts/: urls.py  validators.py  views.py
accounts/management/commands/: create_dummy_data.py
analytics/: models.py  views.py
analytics/migrations/: 0001_initial.py
cards/: models.py
docker/: Dockerfile  docker-compose.test.yml  docker-entrypoint.sh  gunicorn_conf.py
infikar/: asgi.py  health.py  settings.py  urls.py  wsgi.py
infikar/accounts/: admin.py  apps.py  middleware.py  models.py  urls.py  username_rules.py  validators.py  views.py
infikar/accounts/migrations/: 0001_initial.py  0002_alter_user_username.py
infikar/analytics/: admin.py  apps.py  urls.py
infikar/cards/: admin.py  app_urls.py  apps.py  forms.py  models.py  urls.py  views.py
infikar/cards/migrations/: 0001_initial.py  0002_card_social_links.py  0003_card_card_image.py
infikar/subscriptions/: admin.py  apps.py  models.py  views.py
infikar/templates/: apps.py
subscriptions/: urls.py
subscriptions/migrations/: 0001_initial.py
templates/accounts/: dashboard.html  login.html  signup.html  username_setup.html
templates/analytics/: dashboard.html
templates/cards/: card_create.html  card_detail.html  card_manage.html  card_preview.html  dashboard.html  home.html  link_form.html  user_profile.html
templates/subscriptions/: plan_list.html
(+2 files in other folders)
